--- a/ru/contact.html
+++ b/ru/contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Контакты и поддержка - OmegaT</title>
+  <title>Связь и поддержка - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ru/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.">
 
   <link rel="canonical" href="http://omegat.org/ru/contact">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Контакты и поддержка - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Связь и поддержка - OmegaT" />
+  <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/contact" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Контакты и поддержка",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Связь и поддержка",
+    "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ru/download">Загрузить OmegaT</a></li>
+        <li><a href="/ru/download">Загрузка</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ru/resources">Прочие ресурсы OmegaT</a></li>
+        <li><a href="/ru/resources">Ресурсы</a></li>
         <li><a href="/ru/documentation">Документация</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Языки<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,90 +167,58 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-contact"><h1>Контакты и поддержка</h1></div>
+    <div class="jumbotron jumbo-page titles-contact"><h1>Связь и поддержка</h1></div>
         
     <div class="container">
-		
-<h2>Контакты и поддержка</h2>
+  <h3>Пользовательская группа</h3>
+  <p>У OmegaT есть очень активная многонациональная <a href="http://groups.yahoo.com/group/omegat"> группа пользователей</a>, к которой всем рекомендуется присоединиться. Эта группа также служит основной точкой обмена информацией между пользователями и командой проекта.</p>
+  <br/>
+  <h3>Почтовые рассылки</h3>
+  <p>У проекта OmegaT также есть почтовые рассылки на Sourceforge:</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>Рассылка разработчиков OmegaT. В этой рассылке идёт специализированное обсуждение функций и процесса разработки OmegaT, и поэтому он в основном подходит для разработчиков и заинтересованных лиц.</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>Почтовая рассылка переводчиков, занимающихся локализацией OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Система отслеживания</h3>
+  <p>Ошибки, запросы на новую функциональность и вопросы, связанные с документацией, обсуждаются на Sourceforge в соответствующих системах отслеживания. Эти системы отслеживания не рекомендуется использовать до обсуждения возникшего вопроса в группе пользователей или в почтовых рассылках.</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Система отслеживания ошибок</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Система отслеживания запросов на новую функциональность</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Система отслеживания вопросов документации</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Администрация</h3>
 
-<h3>Группа пользователей</h3>
-
-<p>У OmegaT есть очень активная многонациональная <a href="http://groups.yahoo.com/group/omegat">группа пользователей</a>, к которой рекомендуется всем присоединиться. Эта группа также служит основной точкой обмена информацией между пользователями и командой проекта.</p><br/>
-
-<h3>Почтовые рассылки</h3>
-
-<p>У проекта OmegaT также есть почтовые рассылки на Sourceforge:</p>
-		
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a></td>
-
-      <td>Рассылка разработчиков OmegaT. В этой рассылке идёт специализированное обсуждение функций и процесса разработки OmegaT, и поэтому он в основном подходит для разработчиков и заинтересованных лиц.</td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-issues">OmT-Bugs</a></td>
-
-      <td>Почтовая рассылка для обсуждения проблем и ошибок. Пользователям, не занимающимся разработкой, рекомендуется сначала обсуждать ошибки на общем форуме пользователей (OmT, см. выше).</td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a></td>
-
-      <td>Почтовая рассылка переводчиков, занимающихся локализацией OmegaT.</td>
-
-    </tr>
-  
-  </tbody>
-</table>
-
-<br/>
-
-<h3>Система слежения</h3>
-
-<p>В следующих системах на Sourceforge отслеживаются ошибки, запросы функций и вопросы, связанные с документацией. Эти системы слежения не рекомендуется использовать до обсуждения возникшего вопроса в группе пользователей или в почтовых рассылках.</p>
-
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">Система отслеживания ошибок</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520350&amp;group_id=68187&amp;func=browse">Система отслеживания запросов функций</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=912617&amp;group_id=68187&amp;func=browse">Система отслеживания вопросов документации</a></td>
-
-    </tr>
-
-  </tbody>
-</table>
-
-<br/>
-
-<h3>Администрация</h3>
-		
-<p>По административным вопросам обращайтесь к <a href="mailto:info@omegat.org">координатору проекта OmegaT</a>.</p>
+  <p>По вопросам, не упомянутым выше, обращайтесь к <a href="mailto:info@omegat.org">менеджеру проекта OmegaT</a>.<br/> По всем вопросам, связанным с вебсайтом, обращайтесь к <a href="mailto:webmaster@omegat.org">вебмастеру</a>.</p>
 
 </div>
-
 
 
 
@@ -261,7 +229,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>OmegaT в Интернете</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -277,26 +245,26 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры системы OmegaT</a></a></li>
+            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Руководство пользователя</a></li>
+            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Учебные пособия</a></li>
+            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Проект OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Контакты и поддержка</a>
+            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Связь и поддержка</a>
             </li>
             <li>
             <a href="/ru/about"><span class="glyphicon glyphicon-question-sign"></span> О проекте</a>
             </li>
             <li>
-            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Философия</a>
             </li>
           </ul>
         </div>
