--- a/ru/howtos/compatibility.html
+++ b/ru/howtos/compatibility.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Compatibility - OmegaT</title>
+  <title>Совместимость - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ru/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.">
 
   <link rel="canonical" href="http://omegat.org/ru/howtos/compatibility">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Compatibility - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Совместимость - OmegaT" />
+  <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/howtos/compatibility" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Compatibility",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Совместимость",
+    "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ru/download">Загрузить OmegaT</a></li>
+        <li><a href="/ru/download">Загрузка</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ru/resources">Прочие ресурсы OmegaT</a></li>
+        <li><a href="/ru/resources">Ресурсы</a></li>
         <li><a href="/ru/documentation">Документация</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Языки<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,7 +167,7 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-compatibility"><h1>Compatibility</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-compatibility"><h1>Совместимость</h1></div>
         
     <div class="untranslated">Sorry this page has not yet been translated.</div><div class="container">
 
@@ -386,7 +386,7 @@ bilingual files to users of Déjà Vu DVX, who are then able to edit them furthe
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>OmegaT в Интернете</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -402,26 +402,26 @@ bilingual files to users of Déjà Vu DVX, who are then able to edit them furthe
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры системы OmegaT</a></a></li>
+            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Руководство пользователя</a></li>
+            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Учебные пособия</a></li>
+            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Проект OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Контакты и поддержка</a>
+            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Связь и поддержка</a>
             </li>
             <li>
             <a href="/ru/about"><span class="glyphicon glyphicon-question-sign"></span> О проекте</a>
             </li>
             <li>
-            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Философия</a>
             </li>
           </ul>
         </div>
