--- a/ru/philosophy.html
+++ b/ru/philosophy.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Philosophy - OmegaT</title>
+  <title>Философия - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/ru/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.">
 
   <link rel="canonical" href="http://omegat.org/ru/philosophy">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Philosophy - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Философия - OmegaT" />
+  <meta property="og:description" content="OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java." />
   <meta property="og:url"         content="http://omegat.org/ru/philosophy" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT — свободная программа для автоматизации перевода" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/ru",
-    "headline": "Philosophy",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Философия",
+    "description": "OmegaT — это свободная система автоматизированного перевода для профессиональных переводчиков, поддерживающая память переводов и написанная на языке программирования Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/ru/download">Загрузить OmegaT</a></li>
+        <li><a href="/ru/download">Загрузка</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/ru/resources">Прочие ресурсы OmegaT</a></li>
+        <li><a href="/ru/resources">Ресурсы</a></li>
         <li><a href="/ru/documentation">Документация</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Языки<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -167,37 +167,37 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-philosophy"><h1>Philosophy</h1></div>
+    <div class="jumbotron jumbo-page titles-philosophy"><h1>Философия</h1></div>
         
-    <div class="untranslated">Sorry this page has not yet been translated.</div><div class="container">
+    <div class="container">
 
-<h3>The open-source philosophy</h3>
+<h3>Философия Open Source</h3>
 
-<p>OmegaT is an open-source application and project. This means that the source code of the OmegaT program is freely available, and that OmegaT's license gives its users considerable freedom in its use. Not only may it be used free of charge, users are also free to make copies of it and distribute them. </p>
+<p>OmegaT — это приложение и проект с открытым исходным кодом. Это значит, что исходный код OmegaT свободно доступен, и что лицензия OmegaT наделяет пользователей значительными свободами. Приложение не только можно использовать бесплатно, но также копировать и распространять без каких-либо ограничений. </p>
 
-<p>An important aspect of this freedom is that users may also modify the program's code. To the open-source movement, the freedom that users have to change the program to suit their own needs is more important than the fact that they do not have to pay for it. This is described as "free as in speech", in contrast to "free as in beer".
+<p>Важный аспект этой свободы заключается в том, что пользователям разрешается изменять программный код. Для движения Open Source свобода пользователей менять программу под свои нужды важнее, чем то, что за неё не нужно платить. 
 
 </p><br/>
 
-<h3>The OmegaT project philosophy</h3>
+<h3>Философия проекта OmegaT</h3>
 
-<p>The same spirit can be found within the OmegaT project. Users are free to download and use the program. In turn, they are free, and indeed encouraged (but not obliged in any way) to contribute back to the project. How they do so is very much up to them. For example, there is nothing to stop a user writing their own user manual or a demonstration video for OmegaT, and if the project considers it remotely useful, it is likely to be made available to OmegaT's community of users. Where routine tasks are concerned, volunteers working on the OmegaT project are generally given as much freedom as possible in determining the form of their contribution. This hands-off approach is described by the current OmegaT project co-ordinator as "delegated anarchy".</p>
+<p>Тот же характер присущ и проекту OmegaT. Пользователям разрешается свободно скачивать и использовать программу. В свою очередь, они свободны и поощряемы (но совершенно не обязаны) вносить свой вклад в проект. Как они это делают, зависит только от них. Например, ничто не останавливает пользователя от написания собственного руководства или создания демонстрационного видео для OmegaT, и если проекту оно покажется хотя бы немного полезным, скорее всего оно будет сделано доступным в сообществе пользователей OmegaT. Если речь идёт о рутинных заданиях, то обычно добровольцам, работающим над OmegaT, даётся максимальная свобода в определении формы их вклада в проект. Такой неуправляемый подход описывается нынешним координатором проекта OmegaT как "делегированная анархия".</p>
 
-<p>In some areas, some degree of co-ordination is required. For example, anyone is free to make changes to OmegaT's program code and to submit these changes to the development team. Only if they are considered beneficial for OmegaT's users, however, will the development team include them in OmegaT. This ensures that the users' interests are protected, and has also resulted in OmegaT being awarded the   <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia "100% FREE" guarantee</a>.</p><br/>
+<p>Тем не менее в некоторых направлениях требуется определённая доля согласованности действий. Например, любой может изменить программный код OmegaT и оправить эти изменения команде разработчиков. Однако попасть в код программы они могут только, если разработчики посчитают их полезными для других пользователей. Такой подход обеспечивает защиту интересов пользователей, за что OmegaT получила награду <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia "100% FREE" guarantee</a>.</p><br/>
 
-<h3>Development of OmegaT</h3>
+<h3>Разработка OmegaT</h3>
 
-<p>As elsewhere in the OmegaT project, the work of programming OmegaT is done by volunteers, and in keeping with the project philosophy, the developments and improvements they make to OmegaT are ultimately at their discretion. There is however considerable scope within the project for users to suggest improvements and influence the course of future development.</p>
+<p>Как это происходит и в остальных направлениях проекта OmegaT, работа по программированию ложится на плечи добровольцев, и согласно философии проекта цели их работы выбираются ими самостоятельно. У проекта есть несколько мест, где пользователи могут вносить свои предложения по улучшению и влиять на курс дальнейшей разработки.</p>
 
-<p>The first of these is the <a href="http://groups.yahoo.com/group/omegat">OmegaT user group</a>. This is the main focus of the OmegaT user community. New users of OmegaT are encouraged to make any suggestions here. One reason for this is that the desired function may already have been implemented, or that there may be reasons why it cannot be implemented. Convenient alternative functions or solutions may also exist.</p>
+<p>Первое из них — это <a href="http://groups.yahoo.com/group/omegat">пользовательская группа OmegaT</a>. Здесь происходит основная часть взаимодействий в сообществе OmegaT. Новым пользователям OmegaT рекомендуется оставлять свои предложения именно тут. Одна из причин для этого заключается в том, что желаемая функциональность уже может присутствовать, или могут существовать причины, по которым она не может быть реализована. Также могут существовать удобные альтернативные решения для проблемы.</p>
 
-<p>Detailed technical discussion of changes is best conducted directly with OmegaT's developers. For this purpose, a dedicated <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">developers' mailing list</a> exists.</p>
+<p>Подробные технические обсуждения изменений лучше всего вести напрямую с разработчиками OmegaT. Для этих целей существует отдельная <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">почтовая рассылка для разработчиков</a>.</p>
 
-<p>Once a user has formulated a proposed change or enhancement to OmegaT, a defined procedure exists for its submission to the development team for consideration. This enables the numerous suggestions to be managed more easily. The procedure is termed an <a href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" (Request for Feature Enhancement) and is managed here</a>.</p>
+<p>Когда пользователь сформулировал предлагаемое изменение или улучшение для OmegaT, необходимо провести определённую процедуру для рассмотрения предложения командой разработчиков. Такой подход позволяет проще управлять большим количеством предложений. Процедура называется <a href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" (запрос на улучшение функциональности) и проводится здесь</a>.</p>
 
-<p>Literally hundreds of RFEs have already been made, and many of them already implemented. However, submission of an RFE does not mean that the desired feature or improvement will automatically be implemented. Whether or not it is adopted depends firstly upon whether the development team considers it beneficial to OmegaT, and secondly, upon whether one of the developers is willing to do the work of implementing it. </p>
+<p>Уже были созданы сотни RFE, многие из которых были реализованы в программе. Однако создание RFE не означает автоматически, что желаемая функциональность будет реализована. Случится это или нет, зависит в первую очередь от того, сочтёт ли команда разработчиков предложение полезным для OmegaT, а также от того, захочет ли кто-нибудь из разработчиков взяться за его реализацию. </p>
 
-<p>OmegaT's developers, who are all volunteers, may be more willing to implement an RFE if the development work is funded by the requester. <a href="sponsorship.html">Sponsorship of development has already resulted in the addition of certain features.</a> If you are willing to finance the work of implementing your desired feature, please contact the development team privately for a quotation. It may also be possible for developments commissioned from external developers to be implemented within OmegaT. As with free developments, however, the principle still applies that any changes to OmegaT must be beneficial to the application and its users.</p>
+<p>Разработчики OmegaT, будучи все добровольцами, могут посчитать RFE более важным, если работа будет оплачена лицом, создавшим запрос. <a href="sponsorship.html">Спонсирование разработки уже привело к реализации некоторых возможностей.</a> Если вы готовы профинансировать работу над желаемой функциональностью, пожалуйста, свяжитесь с командой разработчиков в частном порядке для получения расценки. Также возможно привлечение сторонних разработчиков для реализации функциональности в OmegaT. Однако, как и в случае безвозмездной разработки, к любым изменениям в OmegaT применяется принцип, согласно которому все они должны быть полезны как для программы, так и для её пользователей.</p>
 
 
 </div>
@@ -211,7 +211,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>OmegaT в Интернете</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -227,26 +227,26 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры системы OmegaT</a></a></li>
+            <li><a href="/ru/documentation#manual"><span class="glyphicon glyphicon-book"></span> Руководство пользователя</a></li>
+            <li><a href="/ru/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Учебные пособия</a></li>
+            <li><a href="/ru/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> HowTo</a></li>
+            <li><a href="/ru/reviews"><span class="glyphicon glyphicon-heart"></span> Обзоры</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Проект OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
             <li>
-            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Контакты и поддержка</a>
+            <a href="/ru/contact"><span class="glyphicon glyphicon-envelope"></span> Связь и поддержка</a>
             </li>
             <li>
             <a href="/ru/about"><span class="glyphicon glyphicon-question-sign"></span> О проекте</a>
             </li>
             <li>
-            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
+            <a href="/ru/philosophy"><span class="glyphicon glyphicon-console"></span> Философия</a>
             </li>
           </ul>
         </div>
